--- a/virtual-Assistant/src/App.css
+++ b/virtual-Assistant/src/App.css
@@ -7,6 +7,7 @@
   justify-content: start;
   flex-direction: column;
   padding: 10px;
+  gap: 10px;
 }
 
 #shifra{
@@ -18,5 +19,19 @@ span{
   font-size: 2vmax;
   background-clip: text;
   color: transparent;
+}
+
+button{
+  width: 180px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  font-size: 20px;
+  border-radius: 20px;
+  border: none;
+  background-color: rgb(79, 224, 234);
+  box-shadow: 2px 2px 50px rgb(79,224, 234);
 
 }
